--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
       <h3>I'm in the AppComponent!</h3>
       <hr>
       <app-servers></app-servers>
+      <warning-alert></warning-alert>
+      <success-alert></success-alert>
     </div>
   </div>
 </div>
