--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
       <h3>I'm in the AppComponent!</h3>
       <hr>
       <app-servers></app-servers>
-      <warning-alert></warning-alert>
-      <success-alert></success-alert>
+      <app-warning-alert></app-warning-alert>
+      <app-success-alert></app-success-alert>
     </div>
   </div>
 </div>
