--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,8 +1,8 @@
 <label>Server Name</label>
-<input 
-    type="text" 
+<input
+    type="text"
     class="form-control"
-    (input) ="onUpdateServerName($event)">
+    [(ngModel)]="serverName">
 <p>{{ serverName }}</p>
 <button 
     class="btn btn-primary" 
