--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -15,4 +15,4 @@
     <p>Please create a server.</p>
 </ng-template>
 <hr>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
